# Diffusion_inference

./: .gitignore  CMakeLists.txt  CMakeLists_real.txt  DEPLOYMENT_READY.md  GITHUB_SETUP.md  LIGHTNING_AI.md  README.md  build_and_run.ps1  build_lightning.sh  build_with_sdcpp.ps1  imgui.ini  real_model_example.cpp  run_gui.ps1  sd_wrapper.cpp  sd_wrapper.h
build_gui/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  StableDiffusionGUI.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  glad.vcxproj  glad.vcxproj.filters  imgui.vcxproj  imgui.vcxproj.filters  sd_gui.vcxproj  sd_gui.vcxproj.filters
build_gui/glad.dir/Release/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_gui/imgui.dir/Release/imgui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_gui/sd_gui.dir/Release/: sd_gui.exe.recipe
build_gui/sd_gui.dir/Release/sd_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
build_gui/stable-diffusion.cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  stable-diffusion.sln  stable-diffusion.vcxproj  stable-diffusion.vcxproj.filters
build_gui/stable-diffusion.cpp/ggml/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ggml.sln
build_gui/stable-diffusion.cpp/ggml/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  ggml-base.vcxproj  ggml-base.vcxproj.filters  ggml-cpu.vcxproj  ggml-cpu.vcxproj.filters  ggml.vcxproj  ggml.vcxproj.filters
build_gui/stable-diffusion.cpp/ggml/src/ggml-base.dir/Release/ggml-base.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_gui/stable-diffusion.cpp/ggml/src/ggml-cpu/: INSTALL.vcxproj  INSTALL.vcxproj.filters
build_gui/stable-diffusion.cpp/ggml/src/ggml-cpu.dir/Release/: ggml-cpu.lib.recipe
build_gui/stable-diffusion.cpp/ggml/src/ggml-cpu.dir/Release/ggml-cpu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
build_gui/stable-diffusion.cpp/ggml/src/ggml-cuda/: INSTALL.vcxproj  INSTALL.vcxproj.filters  ggml-cuda.vcxproj  ggml-cuda.vcxproj.filters
build_gui/stable-diffusion.cpp/ggml/src/ggml-cuda/ggml-cuda.dir/Release/: acc.cu-1932780451.deps  acc.cu.cache  add-id.cu-990436711.deps  add-id.cu.cache  clamp.cu.cache  (+183 more)
build_gui/stable-diffusion.cpp/stable-diffusion.dir/Release/stable-diffusion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  stable-diffusion.lastbuildstate
build_gui/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_gui/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
src/: gui_app.cpp  gui_app.h  image_viewer.cpp  image_viewer.h  main.cpp  sd_generator.cpp  sd_generator.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
(+18 files in other folders)
